Added searchByComplete. Added tests for it as well.
